refactor: remove HBA integration and externalize branding/domain settings

--- a/.env.example
+++ b/.env.example
@@ -9,14 +9,8 @@ PUBLIC_LOGIN_PATH=/auth/login
 PUBLIC_LOGOUT_PATH=/auth/logout
 PUBLIC_REGISTER_PATH=/auth/register
 PUBLIC_ADMIN_USERS_PATH=/auth/admin/users
-PUBLIC_ADMIN_HBA_SSO_PATH=/auth/admin/hba-sso
 PUBLIC_CONFIRM_EMAIL_PREFIX=/auth/confirm-email
 PUBLIC_SUGGEST_PATH=/auth/suggest-users
-HBA_PUBLIC_PATH=/hba
-HBA_SSO_ENABLED=true
-HBA_SSO_URL=/hba/sso-login
-HBA_SSO_SECRET=change-shared-sso-secret
-HBA_SSO_MAX_AGE_SECONDS=120
 LOGIN_SUGGEST_ENABLED=false
 LOGIN_SUGGEST_MIN_CHARS=3
 LOGIN_SUGGEST_RATE_LIMIT_PER_MIN=120
@@ -56,3 +50,8 @@ MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_FROM=no-reply@example.org
 ADMIN_NOTIFY_EMAIL=admin1@example.org,admin2@example.org
+LOGO_URL=https://www.icb.cnr.it/wp-content/uploads/2025/09/LOGO-ICB-STANDARD-web-b.png
+
+# Domini email consentiti per auto-registrazione locale (separati da virgola)
+REGISTER_ALLOW_ANY_DOMAIN=false
+REGISTER_ALLOWED_DOMAINS=cnr.it
