chore: generalize .env.example placeholders

--- a/.env.example
+++ b/.env.example
@@ -50,8 +50,8 @@ MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_FROM=no-reply@example.org
 ADMIN_NOTIFY_EMAIL=admin1@example.org,admin2@example.org
-LOGO_URL=https://www.icb.cnr.it/wp-content/uploads/2025/09/LOGO-ICB-STANDARD-web-b.png
+LOGO_URL=https://example.org/path/logo.png
 
 # Domini email consentiti per auto-registrazione locale (separati da virgola)
 REGISTER_ALLOW_ANY_DOMAIN=false
-REGISTER_ALLOWED_DOMAINS=cnr.it
+REGISTER_ALLOWED_DOMAINS=example.org
